--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>Mr Loveridge Website</title>
 </head>
 <body>
-	Test Website
+	<h1>Test Website</h1>
+	<p>Mr Loveridge's Test Website</p>
+	
 </body>
 </html>
