--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mr Loveridge Website</title>
+	<title>Mr Loveridge's Website</title>
 </head>
 <body>
 	<h1>Test Website</h1>
 	<p>Mr Loveridge's Test Website</p>
+	<h2>thigs are complicated do do</h2>
 	
 </body>
 </html>
