--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Test Website</h1>
 	<p>Mr Loveridge's Test Website</p>
-	<h2>thigs are complicated do do</h2>
+	<h2>things are complicated to do</h2>
 	
 </body>
 </html>
